# detective-anywhere

./: .env.example  .firebaserc  .gitignore  .mcp.json  AGENTS.md  Dockerfile  Dockerfile.debug  Dockerfile.test  QUICK_START.md  README.md  README_DEPLOYMENT.md  ROADMAP.md  center_kita_custom_scenario.json  cloudbuild.debug.yaml  cloudbuild.test.yaml  cloudbuild.yaml  create-github-issues.sh  debug_imports.py  deploy-firebase.sh  deploy.sh  deploy_now.sh  deploy_production.sh  docker-compose.dev.yml  docker-compose.yml  firebase.json  github-issues-navigation.md  github-issues.md  local-dev.sh  main.py  manifest.json  mobile-app.html  pyproject.toml  quick-deploy.sh  requirements.txt  service-worker.js  start_backend.py  test-api-keys-only.py  test-custom-location.py  test-gemini-integration.py  test-google-maps-simple.py  (+6 more)
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
backend/: Dockerfile  Dockerfile.dev  TYPE_HINTS_DOCUMENTATION.md  cloudbuild.yaml  healthcheck.py  requirements-dev.txt  requirements-minimal.txt  requirements.txt  service.yaml
backend/src/: main.py  main_minimal.py
docs/: GOOGLE_CLOUD_SETUP.md  LAZY_INITIALIZATION.md  api-spec.md  local-development.md  mvp-implementation-plan.md  system-design.md
local_db/game_history/: test_game_123_history.json
local_db/game_sessions/: 0a16e6b7-dd1d-432f-b5d5-2ce315a56b11.json  0f8cbe41-8266-4fd5-8179-27c3d6746a7c.json  142014ef-df2a-4e06-ac2c-35f76e5db1d2.json  (+50 more)
mobile/: README.md  pubspec.yaml
scripts/: setup-secrets.sh
src/: detective_anywhere.py
tests/: README.md  __init__.py
(+66 files in other folders)
